samples/_failures_safe/1761796378_af2c5e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d263b935.c: In function ‘tokenize’:
./samples/SAFE/__tmp_d263b935.c:175:27: error: ‘TO’ undeclared (first use in this function)
  175 |         if (token.type != TO
      |                           ^~
./samples/SAFE/__tmp_d263b935.c:175:27: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_d263b935.c:175:29: error: expected ‘)’ at end of input
  175 |         if (token.type != TO
      |            ~                ^
      |                             )
./samples/SAFE/__tmp_d263b935.c:175:9: error: expected declaration or statement at end of input
  175 |         if (token.type != TO
      |         ^~
./samples/SAFE/__tmp_d263b935.c:175:9: error: expected declaration or statement at end of input
